made headline visible again

--- a/offgridplanner/templates/pages/model_description.html
+++ b/offgridplanner/templates/pages/model_description.html
@@ -4,10 +4,10 @@
 
 {% block content %}
     <section id="section" class="dashboard">
-        <div class="container" style="text-align: justify; margin-top: 100px;">
+        <div class="container" style="text-align: justify;">
             <!-- Section Header -->
             <div class="row">
-                <div class="col-12" style="padding-left: 30px; padding-right: 30px; margin-top: -200px">
+                <div class="col-12" style="padding-left: 30px; padding-right: 30px">
                     <h1>Model Description</h1>
                     <p>
                         This section provides a brief overview of the models used in the backend of the tool. Each model is designed to address specific tasks related to demand estimation, spatial grid planning, and the optimal sizing of energy converters. Together, these models contribute to a comprehensive analysis framework, supporting the planning and optimization of off-grid energy systems. Below is a description of each model and its specific functionality.
