fixed background on model description

--- a/offgridplanner/templates/pages/model_description.html
+++ b/offgridplanner/templates/pages/model_description.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-    <section id="section" class="dashboard">
+    <section id="section" class="dashboard" style="min-height: unset">
         <div class="container" style="text-align: justify;">
             <!-- Section Header -->
             <div class="row">
