Remove hollow attribute from previous button

--- a/offgridplanner/templates/pages/training_tasks.html
+++ b/offgridplanner/templates/pages/training_tasks.html
@@ -415,7 +415,7 @@
                 alt="PeopleSun logo" />
         </div>
         <div class="footer__buttons">
-            <button class="btn btn--medium btn--hollow btn--previous" id="prevButton" onclick="prevTask();">Previous</button>
+            <button class="btn btn--medium btn--previous" id="prevButton" onclick="prevTask();">Previous</button>
             <button class="btn btn--medium" style="color: #fff" id="nextButton" onclick="nextTask();">Next</button>
         </div>
         <div class="footer__links">
