--- a/offgridplanner/static/css/main.css
+++ b/offgridplanner/static/css/main.css
@@ -1588,6 +1588,9 @@ div.disabled {
     padding: 1rem 3rem 1rem;
 }
 
+.modal .modal-body {
+    padding: 3rem;
+}
 
 table.table {
     -webkit-box-shadow: 0px 0px 16px rgba(31, 86, 125, 0.08);
@@ -1767,57 +1770,6 @@ nav.navbar .dropdown-menu li {
         content: '';
     }
 }
-
-.task_dashboard {
-    display: none;
-    width: 100%; /* Adjust as needed */
-    padding: 20px;
-    padding-bottom: calc(20px + 4.5rem);
-    background-color: var(--bcc);
-}
-.task_dashboard.active {
-    display: block;
-}
-
-.accordion {
-    width: 80%;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-.accordion-item {
-    width: 100%;
-}
-
-.training_wizard {
-    visibility: visible !important;
-    opacity: 1 !important;
-    transition: none !important;
-}
-
-/* Use data-step-number to display numbering */
-.training_wizard__steps li::before {
-    content: attr(data-step-number) ".";
-    margin-right: 5px;
-    font-weight: bold;
-    color: var(--bct);
-}
-
-/* Style for active step */
-.training_wizard__steps li.active::before {
-    color: var(--bct);
-}
-
-/* Ensure steps are displayed correctly */
-.training_wizard__steps li {
-    display: inline-block !important;
-}
-
-/* Optional: Adjust step text color */
-.training_wizard__steps li a {
-    color: inherit !important;
-    text-decoration: none;
-}
-
 
 /* .wizard {
     visibility: hidden;  /* Keeps the space in the layout
@@ -2029,7 +1981,6 @@ content: "7"; }
     background-color: var(--bcc);
     min-height: calc(100vh - 7rem - 4rem - 1rem - 4.5rem);
     padding: 3rem 0 4rem;
-    margin-top: 5rem;
 }
 
 .dashboard > div {
@@ -2945,6 +2896,7 @@ button:hover {
     text-align: center;
 }
 
+/* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -2955,8 +2907,10 @@ button:hover {
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgba(0, 0, 0, 0.5);
+    padding-top: 50px;
 }
 
+/* Modal Content/Box */
 .modal-content {
     position: relative;
     background-color: var(--bct);
@@ -2970,7 +2924,11 @@ hr {
     margin-bottom: 25px;
 }
 
+/* The Modal Close Button (x) */
 .close {
+    position: relative;
+    bottom: 0.25rem;
+    right: 0.5rem;
     position: absolute;
     top: 10px;
     right: 15px;
@@ -2978,6 +2936,7 @@ hr {
     height: 32px;
     font-size: 2rem;
     font-weight: bold;
+    color: #f1f1f1;
     color: #1F567D;
     border: 2px solid #1F567D;
     border-radius: 4px;
@@ -2987,8 +2946,10 @@ hr {
     align-items: center;        /* vertical centering */
     justify-content: center;    /* horizontal centering */
 }
+
 .close:hover,
 .close:focus {
+    color: #1F567D;
     color: #163c56;
     cursor: pointer;
 }
