--- a/offgridplanner/static/css/pages/energy_system_design.css
+++ b/offgridplanner/static/css/pages/energy_system_design.css
@@ -1,12 +1,5 @@
 @import "../variables.css";
 
-.readonly-disabled {
-    background-color: #e9ecef; /* Matches Bootstrap disabled look */
-    color: #6c757d;
-    cursor: not-allowed;
-    border: 1px solid #ced4da;
-}
-
 .esd {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -50,4 +43,77 @@
     font-size: var(--font-size--md);
     font-weight: var(--font-weight--bold);
     margin-bottom: 0;
+}
+
+.esd-sidebar__content, 
+.esd-diagram__content {
+    padding: var(--padding-normal);
+}
+
+.esd-sidebar__category:not(:last-of-type) {
+    margin-bottom: 1.5rem;
+}
+
+.esd-sidebar__category-title {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.esd-sidebar__category-title span {
+    font-size: var(--font-size--md);
+    text-transform: uppercase;
+}
+
+.esd-component {
+    padding: var(--padding-normal);
+    margin-bottom: 0.5rem;
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+}
+
+.esd-component:last-of-type {
+    margin-bottom: 0;
+}
+
+.esd-component__header {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding-bottom: var(--padding-normal);
+    font-size: var(--font-size--md);
+}
+
+.esd-component__header .form-check {
+    padding-left: 0;
+    margin-bottom: 0;
+}
+
+.esd-component__header input[type="checkbox"] {
+    margin: 0;
+}
+
+.esd-component__input-row:not(:last-child) {
+    margin-bottom: 0.5rem;
+}
+
+.esd-component__input-row label {
+    font-weight: var(--font-weight--bold);
+    font-size: var(--font-size--sm);
+    margin-bottom: 0.25rem;
+}
+
+.esd-component__input-row input,
+.esd-component__input-row input:valid {
+    font-size: var(--font-size--sm);
+    background-color: var(--background-color--main) !important;
+}
+
+.esd-component__input-row .input-group-text {
+    font-size: var(--font-size--sm);
+}
+
+.esd-component__input-row:has(.readonly-disabled) {
+    display: none;
 }
