--- a/offgridplanner/static/css/variables.css
+++ b/offgridplanner/static/css/variables.css
@@ -17,6 +17,7 @@
   /* Borders */
   --border-color: #CEDBE3;
   --border-radius: 0.5rem;
+  --box-shadow: 0 1px 4px 0 rgba(31, 86, 125, 0.25);
 
   /* Spacing */
   --padding-normal: 1rem;
