--- a/offgridplanner/static/css/variables.css
+++ b/offgridplanner/static/css/variables.css
@@ -2,6 +2,7 @@
   /* Typography */
   --font-color--main: #212529;
   --font-color--secondary: #5E798D;
+  --font-color--selected: #1775A7;
   --font-weight--normal: 400;
   --font-weight--bold: 700;
   --font-size--lg: 1.25rem;
