--- a/offgridplanner/templates/pages/simulation_results.html
+++ b/offgridplanner/templates/pages/simulation_results.html
@@ -29,26 +29,39 @@
       <main>
         <section id="dashboard" class="dashboard">
           <div>
-            <div class="row" id="actionButtonsRow" style="padding: 12px">
-              <div style="display: flex; width: 100%; padding: 0; margin: 0;">
-                <a id="downloadCSV"
-                   class="btn btn--medium"
-                   style="height: 32px;
-                          display: flex;
-                          align-items: center;
-                          justify-content: center;
-                          width: 50%;
-                          margin-right: 10px"
-                   href="#">{% translate 'Download Results (xlsx-format)' %}</a>
-                <a id="downloadPDF"
-                   class="btn btn--medium"
-                   style="height: 32px;
-                          display: flex;
-                          align-items: center;
-                          justify-content: center;
-                          width: 50%;
-                          margin-right: 10px"
-                   href="#">{% translate 'Download Results (PDF)' %}</a>
+            <div class="row" id="actionButtonsRow" style="padding: 0 0.75rem">
+              <div style="display: flex; justify-content: flex-end; align-items: center; gap: 2rem; width: 100%; padding: 0; margin: 0;">
+                <a href="/">{% translate 'My Projects' %}</a>
+                <div class="btn-group">
+                  <button 
+                    type="button"
+                    class="btn btn--download dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+                      <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5"/>
+                      <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708z"/>
+                    </svg>
+                    {% translate 'Download Results' %}
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a id="downloadCSV"
+                        class="dropdown-item"
+                        href="#">
+                        {% translate 'Download Results (xlsx-format)' %}
+                      </a>
+                    </li>
+                    <li>
+                      <a id="downloadPDF"
+                        class="dropdown-item"
+                        href="#">
+                        {% translate 'Download Results (PDF)' %}
+                      </a>
+                    </li>
+                  </ul>
+                </div>
                 <!-- Can delete if not needed anymore -->
                 <!-- <a id="rerunCalculation"
                    class="btn btn--medium"
@@ -61,13 +74,6 @@
                           margin-left: 10px"
                    href="javascript:void(0);"
                    onclick="forward_if_no_task_is_pending({{ proj_id }});">{% translate 'Recalculate' %}</a> -->
-                <a class="btn btn--medium"
-                   style="height: 32px;
-                          display: flex;
-                          align-items: center;
-                          justify-content: center;
-                          width: 50%"
-                   href="/">{% translate 'My Projects' %}</a>
               </div>
             </div>
             <div class="row" id="firstRow">
@@ -196,7 +202,7 @@
               <div class="col" style="display: flex; justify-content: center;">
                 <div class="chart" style="height: auto;">
                   <div class="chart__header">
-                    <span class="title">{% translate 'Results' %}</span>
+                    <h2 class="title">{% translate 'Results' %}</h2>
                   </div>
                   <div class="chart__content" style="height: auto;">
                     {% if do_grid_optimization %}
