--- a/offgridplanner/templates/pages/energy_system_design.html
+++ b/offgridplanner/templates/pages/energy_system_design.html
@@ -457,8 +457,8 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <p style="font-size: 12px;">
+      <div class="row esd-sources">
+        <p>
           Sources:
           <br />
           <a href="https://openknowledge.worldbank.org/server/api/core/bitstreams/32287154-1ccb-46ce-83af-08facf7a3b49/content">Mini
