--- a/offgridplanner/static/css/variables.css
+++ b/offgridplanner/static/css/variables.css
@@ -16,7 +16,7 @@
 
   /* Colors */
   --background-color--main: #FFFFFF;
-  --background-color--secondary: #F4F7F9;
+  --background-color--secondary: #FAFAFA;
   --button-background--primary: #1F567D;
   --button-color--primary: #FFFFFF;
 
