--- a/offgridplanner/templates/pages/energy_system_design.html
+++ b/offgridplanner/templates/pages/energy_system_design.html
@@ -318,9 +318,10 @@
             <div class="esd-diagram__header">
               <h2>Schematic of the Selected Off-Grid System</h2>
             </div>
+            <img src="{% static 'images/Energy-System-Example.png' %}" width="910" height="632" />
+            <!-- @Paula: You can delete this block if not needed anymore -->
+            <!-- <svg id="blockDiagram" width="850" height="450">
 
-            <svg id="blockDiagram" width="850" height="450">
-              <!-- DEMAND -->
               <g id="groupDemand" visibility="hidden">
                 <g>
                   <line id="lineDemand"></line>
@@ -335,7 +336,7 @@
                   100% covered
                 </text>
               </g>
-              <!-- SHORTAGE -->
+
               <g id="groupShortage" visibility="hidden">
                 <g>
                   <line id="lineShortage"></line>
@@ -349,7 +350,7 @@
                 <text id="informationShortage" dominant-baseline="bottom"></text>
                 <text id="informationShortageSecondLine" dominant-baseline="bottom"></text>
               </g>
-              <!-- SURPLUS -->
+
               <g id="groupSurplus" visibility="hidden">
                 <g>
                   <line id="lineSurplus"></line>
@@ -362,7 +363,7 @@
                 </text>
                 <text id="informationSurplus" dominant-baseline="bottom"></text>
               </g>
-              <!-- PV -->
+
               <g id="groupPv" visibility="hidden">
                 <g>
                   <line id="linePv"></line>
@@ -377,7 +378,7 @@
                   design
                 </text>
               </g>
-              <!-- BATTERY -->
+
               <g id="groupBattery" visibility="hidden">
                 <g>
                   <line id="lineBattery"></line>
@@ -392,7 +393,7 @@
                   design
                 </text>
               </g>
-              <!-- DIESEL GENSET -->
+
               <g id="groupDiesel_genset" visibility="hidden">
                 <g>
                   <line id="lineDiesel_genset"></line>
@@ -407,7 +408,7 @@
                   design
                 </text>
               </g>
-              <!-- INVERTER -->
+
               <g id="groupInverter" visibility="hidden">
                 <g>
                   <line id="lineInverter"></line>
@@ -425,7 +426,7 @@
                   design
                 </text>
               </g>
-              <!-- RECTIFIER -->
+
               <g id="groupRectifier" visibility="hidden">
                 <g>
                   <line id="lineRectifier"></line>
@@ -443,21 +444,21 @@
                   design
                 </text>
               </g>
-              <!-- AC BUS -->
+
               <g id="groupAcBus" visibility="hidden">
                 <rect id="blockAcBus" />
                 <text id="textAcBus" class="components-text--design" dominant-baseline="middle" text-anchor="middle">
                   AC Bus
                 </text>
               </g>
-              <!-- DC BUS -->
+
               <g id="groupDcBus" visibility="hidden">
                 <rect id="blockDcBus" />
                 <text id="textDcBus" class="components-text--design" dominant-baseline="middle" text-anchor="middle">
                   DC Bus
                 </text>
               </g>
-            </svg>
+            </svg> -->
 
           </div>
         </div>
