--- a/offgridplanner/templates/pages/energy_system_design.html
+++ b/offgridplanner/templates/pages/energy_system_design.html
@@ -125,34 +125,48 @@
                       </div>
                     </div>
                   </div>
-                  <!-- H2 Storage Component -->
+                  <!-- Hydrogen Component -->
                   <div class="accordion-item">
-                    {% for field_name, field in grouped_fields|getkey:"H2 Storage" %}
-                    {% if field_name == "h2_storage_settings_is_selected" %}
-                    <h2 class="accordion-header" id="headingH2Storage">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseH2Storage" aria-expanded="false" aria-controls="collapseH2Storage">
-                        {{ field|add_class:"form-check-input me-2" }}
-                        <span class="grid-title" id="selectH2Storage">{{ field.label }}</span>
+                    <h2 class="accordion-header" id="headingHydrogen">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseHydrogen" aria-expanded="false" aria-controls="collapseHydrogen">
+                        <span class="grid-title">Hydrogen</span>
                       </button>
                     </h2>
-                    <div id="collapseH2Storage" class="accordion-collapse collapse" aria-labelledby="headingH2Storage" data-bs-parent="#storageComponentsAccordion">
+                    <div id="collapseHydrogen" class="accordion-collapse collapse" aria-labelledby="headingHydrogen" data-bs-parent="#storageComponentsAccordion">
                       <div class="accordion-body">
-                      {% elif field_name == "h2_storage_settings_design" %}
-                        <div class="row">
-                          {{ field }}
-                        </div>
-                        {% else %}
-                        <div class="esd-component__input-row mb-3">
-                          <label for="id_{{field.name}}" id="{{field.name}}_label">{{ field.label | safe }}</label>
-                          <div class="input-group">
-                            {{ field|add_class:"form-control" }}
-                            <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
+                        <!-- Nested Accordion for H2 Storage, Electrolyzer and Fuel Cell -->
+                        <div class="accordion accordion-flush mt-3" id="hydrogenSubComponentsAccordion">
+                          
+                          <!-- H2 Storage Component -->
+                          <div class="accordion-item">
+                            {% for field_name, field in grouped_fields|getkey:"H2 Storage" %}
+                            {% if field_name == "h2_storage_settings_is_selected" %}
+                            <h2 class="accordion-header" id="headingH2Storage">
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseH2Storage" aria-expanded="false" aria-controls="collapseH2Storage">
+                                {{ field|add_class:"form-check-input me-2" }}
+                                <span class="grid-title" id="selectH2Storage">{{ field.label }}</span>
+                              </button>
+                            </h2>
+                            <div id="collapseH2Storage" class="accordion-collapse collapse" aria-labelledby="headingH2Storage" data-bs-parent="#hydrogenSubComponentsAccordion">
+                              <div class="accordion-body">
+                              {% elif field_name == "h2_storage_settings_design" %}
+                                <div class="row">
+                                  {{ field }}
+                                </div>
+                                {% else %}
+                                <div class="esd-component__input-row mb-3">
+                                  <label for="id_{{field.name}}" id="{{field.name}}_label">{{ field.label | safe }}</label>
+                                  <div class="input-group">
+                                    {{ field|add_class:"form-control" }}
+                                    <span class="input-group-text" id="{{field.name}}_unit">{{ field.field.widget.attrs.unit }}</span>
+                                  </div>
+                                </div>
+                                {% endif %}
+                                {% endfor %}
+                              </div>
+                            </div>
                           </div>
-                        </div>
-                        {% endif %}
-                        {% endfor %}
-                        <!-- Nested Accordion for Electrolyzer and Fuel Cell -->
-                        <div class="accordion accordion-flush mt-3" id="h2SubComponentsAccordion">
+
                           <!-- Electrolyzer Component -->
                           <div class="accordion-item">
                             {% for field_name, field in grouped_fields|getkey:"Electrolyzer" %}
@@ -163,7 +177,7 @@
                                 <span class="grid-title" id="selectElectrolyzer">{{ field.label }}</span>
                               </button>
                             </h2>
-                            <div id="collapseElectrolyzer" class="accordion-collapse collapse" aria-labelledby="headingElectrolyzer" data-bs-parent="#h2SubComponentsAccordion">
+                            <div id="collapseElectrolyzer" class="accordion-collapse collapse" aria-labelledby="headingElectrolyzer" data-bs-parent="#hydrogenSubComponentsAccordion">
                               <div class="accordion-body">
                               {% elif field_name == "electrolyzer_settings_design" %}
                                 <div class="row">
@@ -182,6 +196,7 @@
                               </div>
                             </div>
                           </div>
+
                           <!-- Fuel Cell Component -->
                           <div class="accordion-item">
                             {% for field_name, field in grouped_fields|getkey:"Fuel Cell" %}
@@ -192,7 +207,7 @@
                                 <span class="grid-title" id="selectFuelCell">{{ field.label }}</span>
                               </button>
                             </h2>
-                            <div id="collapseFuelCell" class="accordion-collapse collapse" aria-labelledby="headingFuelCell" data-bs-parent="#h2SubComponentsAccordion">
+                            <div id="collapseFuelCell" class="accordion-collapse collapse" aria-labelledby="headingFuelCell" data-bs-parent="#hydrogenSubComponentsAccordion">
                               <div class="accordion-body">
                               {% elif field_name == "fuel_cell_settings_design" %}
                                 <div class="row">
@@ -211,6 +226,7 @@
                               </div>
                             </div>
                           </div>
+
                         </div>
                       </div>
                     </div>
