--- a/offgridplanner/static/css/pages/energy_system_design.css
+++ b/offgridplanner/static/css/pages/energy_system_design.css
@@ -138,23 +138,30 @@
 
 .esd-component .accordion-header .accordion-button {
     border: none;
-    padding-left: 0;
+    padding-left: 1rem;
 }
 
 .esd-component .accordion-header .accordion-button:not(.collapsed) {
     background-color: #eff6ff;
 }
 
-.accordion-item--not-selected .accordion-button {
+.esd-component .accordion-item--not-selected .accordion-button {
     opacity: 0.6;
 }
 
-.accordion-item--not-selected .grid-title {
+.esd-component .accordion-item--not-selected .grid-title {
     color: #6c757d !important;
 }
 
-.accordion-item--not-selected .accordion-button:not(.collapsed) {
+.esd-component .accordion-item--not-selected .accordion-button:not(.collapsed) {
     background-color: #f8f9fa !important;
+}
+
+.esd-component .form-check-input[type=checkbox] {
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 6px;
+    margin-left: -1rem;
 }
 
 .esd-sources {
