Replace PeopleSun logo with GreenH2Islands

--- a/offgridplanner/templates/account/signup.html
+++ b/offgridplanner/templates/account/signup.html
@@ -14,7 +14,7 @@
 <main class="signup">
     <div class="signup-frame">
         <div class="signup-frame__img">
-            <img src="{% static 'assets/logos/PeopleSunLogo.png' %}" alt="PeopleSun logo">
+            <img src="{% static 'assets/logos/Green-H2Islands-Full-Logo.png' %}" alt="GreenH2Islands logo">
         </div>
         <div class="signup-frame__heading">
             {% translate "Welcome to the Offgridplanner" %}
