--- a/offgridplanner/templates/base.html
+++ b/offgridplanner/templates/base.html
@@ -10,15 +10,15 @@
           content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="apple-touch-icon"
           sizes="180x180"
-          href="{% static 'assets/favicon/apple-touch-icon.png' %}" />
+          href="{% static 'assets/favicon/Green-H2Islands-Icon-Logo.png' %}" />
     <link rel="icon"
           type="image/png"
           sizes="32x32"
-          href="{% static 'assets/favicon/favicon.ico' %}" />
+          href="{% static 'assets/favicon/Green-H2Islands-Icon-Logo.png' %}" />
     <link rel="icon"
           type="image/png"
           sizes="16x16"
-          href="{% static 'assets/favicon/favicon.ico' %}" />
+          href="{% static 'assets/favicon/Green-H2Islands-Icon-Logo.png' %}" />
     <link rel="manifest" href="{% static 'assets/favicon/site.webmanifest' %}" />
     <meta name="msapplication-TileColor" content="#2b5797" />
     <meta name="theme-color" content="#ffffff" />
@@ -74,8 +74,8 @@
       <footer class="footer">
         <div>
           <div class="footer__logo">
-            <img src="{% static 'assets/logos/PeopleSunLogo.png' %}"
-                 alt="PeopleSun logo" />
+            <img src="{% static 'assets/logos/Green-H2Islands-Full-Logo.png' %}"
+                 alt="GreenH2Islands logo" />
           </div>
           <div class="footer__links">
             <ul>
