--- a/offgridplanner/templates/base-cookiecutter.html
+++ b/offgridplanner/templates/base-cookiecutter.html
@@ -114,8 +114,8 @@
             <footer class="footer">
               <div>
                 <div class="footer__logo">
-                  <img src="{% static 'assets/logos/PeopleSunLogo.png' %}"
-                       alt="PeopleSun logo" />
+                  <img src="{% static 'assets/logos/Green-H2Islands-Full-Logo.png' %}"
+                       alt="GreenH2Islands logo" />
                 </div>
                 <div class="footer__links">
                   <ul>
