--- a/offgridplanner/templates/navbar.html
+++ b/offgridplanner/templates/navbar.html
@@ -12,8 +12,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light {{ navbar_class }}">
   <div class="container-fluid">
     <a class="navbar-brand" href="{% url 'projects:home' %}">
-      <img src="{% static 'assets/logos/PeopleSunLogo.png' %}"
-           alt="PeopleSun Logo" />
+      <img src="{% static 'assets/logos/Green-H2Islands-Full-Logo.png' %}"
+           alt="GreenH2Islands Logo" />
     </a>
     <button class="navbar-toggler"
             type="button"
