--- a/offgridplanner/templates/pages/landing_page.html
+++ b/offgridplanner/templates/pages/landing_page.html
@@ -21,9 +21,11 @@
             <p style="color: var(--cdg); text-align: justify;">
             <p style="color: var(--cdg); text-align: justify;">
               {% blocktranslate trimmed %}
-              The open source tool originated from the PeopleSuN project and serves the planning of
-              off-grid systems in Nigeria. The tool aims to perform a spatial optimization of the
-              distribution grid as well as the design of the energy converters and energy storage. {% endblocktranslate %}
+              The open-source Offgridplanner tool is designed to perform a spatial optimization of
+            distribution grids, it analyses whether consumers are best connected to a mini-grid or
+            electrified through a solar home system, while simultaneously optimizing the energy system components
+            to determine the most viable option for providing access to energy at a specific location.
+            {% endblocktranslate %}
             </p>
             <p style="color: var(--cdg); text-align: justify;">
               {% translate "The features of the tool are listed below:" %}
@@ -33,7 +35,7 @@
               <li>{% translate "Spatial optimization of the distribution grid" %}</li>
               <li>
                 {% blocktranslate trimmed %}
-                Design optimization of the generation systems (PV systems, battery systems, inverters
+                Design optimization of the generation systems (PV systems, battery systems, inverters, hydrogen components
                 and diesel-engines)
                 {% endblocktranslate %}
               </li>
@@ -53,7 +55,7 @@
             <button class="btn btn--long text-right"
                     type="button"
                     onclick="document.getElementById('msgBox').style.display='block'"
-                    style="background-color: var(--cdg);
+                    style="display:none;background-color: var(--cdg);
                color: var(--ccb)">
               {% translate "Test it (without an account)" %}
             </button>
@@ -99,16 +101,14 @@
           <h1 style="color: var(--ccb); margin-top: 20px">{% translate "Demand Estimation" %}</h1>
           <p style="color: var(--ccb); text-align: justify;">
             {% blocktranslate trimmed %}
-            PeopleSuN's project includes a demand modeling tool which utilizes both quantitative and
-            qualitative survey data collected from various non-urban Nigerian villages. With an extensive
-            dataset that includes responses from thousands of households and enterprises, it models
-            appliance ownership, electricity consumption trends, and available expenditures for electricity
-            services, and determines affordable monthly costs. The tool uses statistical models in
-            conjunction with stochastic algorithms to generate likely distributions of electricity demand
-            and expenditures. Initially, this is applied to the surveyed areas and then extrapolated to
-            cover all non-urban regions in Nigeria. The model generates different consumer categories/profiles
-            based on geographical zones and wealth categories, aiding in a nuanced and accurate
-            prediction of electricity demand.
+            The tool provides standard load profiles for different consumer types—such as households,
+            public buildings, enterprises, and specific high-load appliances that users can select.
+            These demand profiles are based on Thailand-specific data gathered throughout the Green-H2-Islands
+            project, as well as previous research on island electrification in Thailand.
+
+            The aim is to offer a low-barrier modelling experience by using basic information about site-specific
+            demand behaviour. If more detailed data is available, users can also upload their own load profiles and
+            use them directly within the tool.
             {% endblocktranslate %}
           </p>
         </div>
@@ -175,25 +175,21 @@
         <h1 style="color: var(--cdg); text-align: left;">{% translate "About" %}</h1>
         <p style="color: var(--cdg); text-align: left">
           {% blocktranslate trimmed %}
-          PeopleSuN is a project funded by the German Federal Ministry of Education and Research (BMBF) within
-          the funding initiative 'Client II - International Partnerships for Sustainable Innovations'. The
-          off-grid tool was developed
-          by the Department of Energy Engineering and Environmental Protection at the Technische Universität
-          Berlin in cooperation with the Reiner-Lemoine-Institute.
+           The Green H2Islands project (FKZ: 67EXI7501A) is funded by the Federal Ministry for the Environment,
+          Climate Action, Nature Conservation and Nuclear Safety (BMUKN) as part of the “Export Initiative
+          Environmental Protection” (EXI). As the EXI project management agency, Zukunft – Umwelt – Gesellschaft (ZUG)
+          gGmbH supports the Federal Ministry for the Environment in carrying out its tasks. As a project of the
+          thematic focus “green hydrogen and fuel cell technologies for decentralized energy supply” within the
+          Export Initiative Environmental Protection, NOW GmbH supports the Green H2Islands project in its
+          function as a program company.
           {% endblocktranslate %}
         </p>
         <div class="image-container">
-          <a href="https://www.tu.berlin/energietechnik" target="_blank">
-            <img src="{% static 'assets/logos/LogoTUB.svg' %}" style="width: 100px" />
+          <a href="https://www.bundesumweltministerium.de/" target="_blank">
+            <img src="{% static 'assets/logos/EXI_BMU-Kombi-Logo_gefoerdert_en_RGB_2025.svg' %}" />
           </a>
           <a href="https://reiner-lemoine-institut.de/" target="_blank">
             <img src="{% static 'assets/logos/LogoRLI.svg' %}" style="width: 120px" />
-          </a>
-          <a href="https://www.bmbf.de/" target="_blank">
-            <img src="{% static 'assets/logos/LogoBMBF.svg' %}" />
-          </a>
-          <a href="https://www.bmbf-client.de/" target="_blank">
-            <img src="{% static 'assets/logos/logo-client2-en.svg' %}" />
           </a>
         </div>
       </div>
